[tool.poetry]
name = "czid-visualization"
version = "0.1.0"
description = "CZID Visualization Library"
authors = ["phoenixAja <plogan@chanzuckerberg>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10,<3.13"
pandas = "^2.0.3"
matplotlib = "^3.7.2"
seaborn = "^0.12.2"
scipy = "^1.11.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
